--- a/src/main/resources/templates/account/checked-email.html
+++ b/src/main/resources/templates/account/checked-email.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>StudyOlle</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="/static/node_modules/bootstrap/dist/css/bootstrap.min.css"/>
     <style>
         .container {
             max-width: 100%;
@@ -12,7 +12,7 @@
 <body class="bg-light">
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <a class="nav-bar-brand" href="/" th:href="@{/}">
-            <img src="/static/images/logo_sm.png" width="30" height="30">
+            <img src="/images/logo_sm.png" width="30" height="30">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
              <span class="navbar-toggler-icon"></span>
