--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -1,43 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>StudyOlle</title>
-    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css"/>
-    <style>
-        .container {
-            max-width: 100%;
-        }
-    </style>
-</head>
+<head th:replace="fragwments.html :: head"></head>
 <body class="bg-light">
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-        <a class="nav-bar-brand" href="/" th:href="@{/}">
-            <img src="/images/logo_sm.png" width="30" height="30">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <form th:action="@{/search/study}" class="form-inline" method="get">
-                        <input class="form-control mr-sm-2" name="keyword" type="search" placeholder="스터디 찾기" aria-label="Search" />
-                    </form>
-                </li>
-            </ul>
-
-            <ul class="navbar-nav justify-content-end">
-                <li class="nav-item">
-                    <a class="nav-link" href-="#" th:href="@{/login}">로그인</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href-="#" th:href="@{/sign-up}">가입</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    <nav th:replace="fragwments.html :: main-nav"></nav>
 
     <div class="container">
         <div class="py-5 text-center">
@@ -89,15 +54,8 @@
             </form>
         </div>
 
-        <footer th:fragment="footer">
-            <div class="row justify-content-center">
-                <img class="mb-2" src="/images/logo_long_kr.jpg" alt="" width="100">
-                <small class="d-block mb-3 text-muted">&copy; 2020</small>
-            </div>
-        </footer>
+        <footer th:replace="fragwments.html :: footer"></footer>
     </div>
-    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script type="application/javascript">
         (function () {
             'use strict';
