--- a/src/main/resources/templates/settings/profile.html
+++ b/src/main/resources/templates/settings/profile.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments.html :: head"></head>
+<head th:replace="fragwments.html :: head"></head>
 <body class="bg-light">
-    <div th:replace="fragments.html :: main-nav"></div>
+    <div th:replace="fragwments.html :: main-nav"></div>
     <div class="container">
         <div class="row mt-5 justify-content-center">
             <div class="col-2">
-                <div th:replace="fragments.html :: settings-menu(currentMenu='profile')"></div>
+                <div th:replace="fragwments.html :: settings-menu (currentMenu='profile')"></div>
             </div>
             <div class="col-8">
                 <div th:if="${message}" class="alert alert-info alert-dismissible fade show mt-3" role="alert">
@@ -32,9 +32,7 @@
                             <small class="form-text text-danger" th:if="${#fields.hasErrors('bio')}" th:errors="*{bio}">
                                 조금 길어요.
                             </small>
-                        </div>
 
-                        <div class="form-group">
                             <label for="url">링크</label>
                             <input id="url" type="url" th:field="*{url}" class="form-control"
                                    placeholder="http://studyolle.com" aria-describedby="urlHelp" required>
@@ -44,18 +42,14 @@
                             <small class="form-text text-danger" th:if="${#fields.hasErrors('url')}" th:errors="*{url}">
                                 옳바른 URL이 아닙니다. 예시처럼 입력해 주세요.
                             </small>
-                        </div>
 
-                        <div class="form-group">
                             <label for="company">직업</label>
                             <input id="company" type="text" th:field="*{occupation}" class="form-control"
                                    placeholder="어떤 일을 하고 계신가요?" aria-describedby="occupationHelp" required>
                             <small id="occupationHelp" class="form-text text-muted">
                                 개발자? 매니저? 취준생? 대표님?
                             </small>
-                        </div>
 
-                        <div class="form-group">
                             <label for="location">활동 지역</label>
                             <input id="location" type="text" th:field="*{location}" class="form-control"
                                    placeholder="Redmond, WA, USA"
@@ -63,10 +57,8 @@
                             <small id="locationdHelp" class="form-text text-muted">
                                 주요 활동(사는 곳이나 직장을 다니는 곳 또는 놀러 다니는 곳) 지역의 도시 이름을 알려주세요.
                             </small>
-                        </div>
 
-                        <div class="form-group">
-                            <input id="profileImage" type="hidden" th:field="*{profileImage}" class="form-control" />
+                            <input id="profileImage" type="hidden" th:field="*{profileImage}" class="form-control"/>
                         </div>
 
                         <div class="form-group">
