--- a/src/main/resources/templates/settings/password.html
+++ b/src/main/resources/templates/settings/password.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments.html :: head"></head>
+<head th:replace="fragwments.html :: head"></head>
 <body class="bg-light">
-    <div th:replace="fragments.html :: main-nav"></div>
+    <nav th:replace="fragwments.html :: main-nav"></nav>
     <div class="container">
         <div class="row mt-5 justify-content-center">
             <div class="col-2">
-                <div th:replace="fragments.html :: settings-menu(currentMenu='password')"></div>
+                <div th:replace="fragwments.html :: settings-menu (currentMenu='password')"></div>
             </div>
             <div class="col-8">
                 <div th:if="${message}" class="alert alert-info alert-dismissible fade show mt-3" role="alert">
@@ -52,6 +52,6 @@
             </div>
         </div>
     </div>
-    <script th:replace="fragments.html :: form-validation"></script>
+    <script th:replace="fragwments.html :: form-validation"></script>
 </body>
 </html>
